--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
                 android:textColor="@color/color_grey_light"
                 android:textColorHint="@color/color_grey_light"
                 android:imeOptions="actionDone"
+                android:inputType="text"
                 android:hint="@string/input_hint_text"
                 android:paddingTop="@dimen/spacing_normal_16"
                 android:paddingBottom="@dimen/spacing_normal_16"
